@@ -17,23 +17,17 @@
 
 package org.keycloak.storage;
 
-import static org.keycloak.models.utils.KeycloakModelUtils.runJobInTransaction;
-import static org.keycloak.utils.StreamsUtil.distinctByKey;
-import static org.keycloak.utils.StreamsUtil.paginatedStream;
-
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
+import java.util.function.Function;
+import java.util.function.Predicate;
 import java.util.stream.Stream;
 
-import io.opentelemetry.api.trace.StatusCode;
-import org.jboss.logging.Logger;
 import org.keycloak.common.Profile;
 import org.keycloak.common.constants.ServiceAccountConstants;
 import org.keycloak.common.util.reflections.Types;
@@ -56,6 +50,7 @@ import org.keycloak.models.ProtocolMapperModel;
 import org.keycloak.models.RealmModel;
 import org.keycloak.models.RoleModel;
 import org.keycloak.models.UserConsentModel;
+import org.keycloak.models.UserCredentialManager;
 import org.keycloak.models.UserManager;
 import org.keycloak.models.UserModel;
 import org.keycloak.models.UserProvider;
@@ -68,7 +63,6 @@ import org.keycloak.organization.OrganizationProvider;
 import org.keycloak.storage.client.ClientStorageProvider;
 import org.keycloak.storage.datastore.DefaultDatastoreProvider;
 import org.keycloak.storage.federated.UserFederatedStorageProvider;
-import org.keycloak.storage.managers.UserStorageSyncManager;
 import org.keycloak.storage.user.ImportedUserValidation;
 import org.keycloak.storage.user.UserBulkUpdateProvider;
 import org.keycloak.storage.user.UserCountMethodsProvider;
@@ -82,6 +76,13 @@ import org.keycloak.userprofile.UserProfileDecorator;
 import org.keycloak.userprofile.UserProfileMetadata;
 import org.keycloak.utils.StreamsUtil;
 import org.keycloak.utils.StringUtil;
+
+import io.opentelemetry.api.trace.StatusCode;
+import org.jboss.logging.Logger;
+
+import static org.keycloak.models.utils.KeycloakModelUtils.runJobInTransaction;
+import static org.keycloak.utils.StreamsUtil.distinctByKey;
+import static org.keycloak.utils.StreamsUtil.paginatedStream;
 
 /**
  * @author <a href="mailto:bill@burkecentral.com">Bill Burke</a>
@@ -108,12 +109,15 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
 
     /**
      * Allows a UserStorageProvider to proxy and/or synchronize an imported user.
-     *
-     * @param realm
-     * @param user
-     * @return
      */
-    protected UserModel importValidation(RealmModel realm, UserModel user) {
+    protected UserModel validateUser(RealmModel realm, UserModel user) {
+        if (user == null) {
+            return null;
+        }
+
+        if (user.isFederated()) {
+            user = validateFederatedUser(realm, user);
+        }
 
         if (isReadOnlyOrganizationMember(user)) {
             if (user instanceof CachedUserModel cachedUserModel) {
@@ -122,14 +126,17 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
             return new ReadOnlyUserModelDelegate(user, false);
         }
 
-        if (user == null || !user.isFederated()) return user;
+        return user;
+    }
 
-        UserStorageProviderModel model = getStorageProviderModel(realm, user.getFederationLink());
+    private UserModel validateFederatedUser(RealmModel realm, UserModel user) {
+        if (!user.isFederated()) {
+            return user;
+        }
+
+        UserStorageProviderModel model = getUserStorageProviderModel(realm, user);
+
         if (model == null) {
-            // remove linked user with unknown storage provider.
-            logger.debugf("Removed user with federation link of unknown storage provider '%s'", user.getUsername());
-            deleteInvalidUserCache(realm, user);
-            deleteInvalidUser(realm, user);
             return null;
         }
 
@@ -145,27 +152,69 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
             return user;
         }
 
-        ImportedUserValidation importedUserValidation = getStorageProviderInstance(model, ImportedUserValidation.class, true);
-        if (importedUserValidation == null) return user;
+        ImportedUserValidation validator = getStorageProviderInstance(model, ImportedUserValidation.class, true);
 
-        UserModel validated = importedUserValidation.validate(realm, user);
-        if (validated == null) {
-            deleteInvalidUserCache(realm, user);
-            if (model.isRemoveInvalidUsersEnabled()) {
-                deleteInvalidUser(realm, user);
-                return null;
-            }
-
-            return new ReadOnlyUserModelDelegate(user, false);
+        if (validator == null) {
+            return user;
         }
 
-        return validated;
+        try {
+            UserModel validated = validator.validate(realm, user);
+
+            if (validated == null) {
+                return deleteFederatedUser(realm, user);
+            }
+
+            return validated;
+        } catch (Exception e) {
+            logger.warnf(e, "User storage provider %s failed during federated user validation", model.getName());
+            return new ReadOnlyUserModelDelegate(user, false, ignore -> new ReadOnlyException("The user is read-only. The user storage provider '" + model.getName() + "' is currently unavailable. Check the server logs for more details."));
+        }
+    }
+
+    private ReadOnlyUserModelDelegate deleteFederatedUser(RealmModel realm, UserModel user) {
+        if (!user.isFederated()) {
+            return null;
+        }
+
+        UserStorageProviderModel model = getUserStorageProviderModel(realm, user);
+
+        if (model == null) {
+            return null;
+        }
+
+        deleteInvalidUserCache(realm, user);
+
+        if (model.isRemoveInvalidUsersEnabled()) {
+            deleteInvalidUser(realm, user);
+            return null;
+        }
+
+        return new ReadOnlyUserModelDelegate(user, false);
+    }
+
+    private UserStorageProviderModel getUserStorageProviderModel(RealmModel realm, UserModel user) {
+        if (user.isFederated()) {
+            UserStorageProviderModel model = getStorageProviderModel(realm, user.getFederationLink());
+
+            if (model == null) {
+                // remove linked user with unknown storage provider.
+                logger.debugf("Removed user with federation link of unknown storage provider '%s'", user.getUsername());
+                deleteInvalidUserCache(realm, user);
+                deleteInvalidUser(realm, user);
+            }
+
+            return model;
+        }
+
+        return null;
     }
 
     private static <T> Stream<T> getCredentialProviders(KeycloakSession session, Class<T> type) {
         return session.getKeycloakSessionFactory().getProviderFactoriesStream(CredentialProvider.class)
                 .filter(f -> Types.supports(type, f, CredentialProviderFactory.class))
-                .map(f -> (T) session.getProvider(CredentialProvider.class, f.getId()));
+                .map(f -> session.getProvider(CredentialProvider.class, f.getId()))
+                .map(type::cast);
     }
 
     @Override
@@ -178,7 +227,7 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
         CredentialValidationOutput result = null;
         for (CredentialAuthentication credentialAuthentication : credentialAuthenticationStream
                 .filter(credentialAuthentication -> credentialAuthentication.supportsCredentialAuthenticationFor(input.getType()))
-                .collect(Collectors.toList())) {
+                .toList()) {
             CredentialValidationOutput validationOutput = session.getProvider(TracingProvider.class).trace(credentialAuthentication.getClass(), "authenticate",
                     span -> {
                         CredentialValidationOutput output = credentialAuthentication.authenticate(realm, input);
@@ -244,113 +293,195 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
     }
 
     protected Stream<UserModel> importValidation(RealmModel realm, Stream<UserModel> users) {
-        return users.map(user -> importValidation(realm, user)).filter(Objects::nonNull);
+        return users.map(user -> validateUser(realm, user)).filter(Objects::nonNull);
     }
 
     @FunctionalInterface
-    interface PaginatedQuery {
+    protected interface PaginatedQuery {
         Stream<UserModel> query(Object provider, Integer firstResult, Integer maxResults);
     }
 
     @FunctionalInterface
-    interface CountQuery {
+    protected interface CountQuery {
         int query(Object provider, Integer firstResult, Integer maxResult);
     }
 
     protected Stream<UserModel> query(PaginatedQuery pagedQuery, RealmModel realm, Integer firstResult, Integer maxResults) {
-        return query(pagedQuery, ((provider, first, max) -> (int) pagedQuery.query(provider, first, max).count()), realm, firstResult, maxResults);
+        return query(pagedQuery, ((provider, first, max) -> (int) pagedQuery.query(provider, first, max).count()), realm, firstResult, maxResults, true);
     }
 
-    protected Stream<UserModel> query(PaginatedQuery pagedQuery, CountQuery countQuery, RealmModel realm, Integer firstResult, Integer maxResults) {
-        if (maxResults != null && maxResults == 0) return Stream.empty();
-
-        Stream<Object> providersStream = Stream.concat(Stream.of((Object) localStorage()), getEnabledStorageProviders(realm, UserQueryMethodsProvider.class));
-
-        UserFederatedStorageProvider federatedStorageProvider = getFederatedStorage();
-        if (federatedStorageProvider != null) {
-            providersStream = Stream.concat(providersStream, Stream.of(federatedStorageProvider));
+    protected Stream<UserModel> query(PaginatedQuery pagedQuery, CountQuery countQuery, RealmModel realm, Integer firstResult, Integer maxResults, boolean requiresFederatedStorage) {
+        if (maxResults != null && maxResults == 0) {
+            return Stream.empty();
         }
 
-        final AtomicInteger currentFirst;
-        final AtomicBoolean needsAdditionalFirstResultFiltering = new AtomicBoolean(false);
+        var storageProviders = getEnabledStorageProviders(realm, UserQueryMethodsProvider.class).toList();
 
-        if (firstResult == null || firstResult <= 0) { // We don't want to skip any users so we don't need to do firstResult filtering
-            currentFirst = new AtomicInteger(0);
-        } else {
-            // This is an optimization using count query to skip querying users if we can use count method to determine how many users can be provided by each provider
-            AtomicBoolean droppingProviders = new AtomicBoolean(true);
-            currentFirst = new AtomicInteger(firstResult);
-
-            providersStream = providersStream
-                .filter(provider -> { // This is basically dropWhile
-                    if (!droppingProviders.get()) return true; // We have already gathered enough users to pass firstResult number in previous providers, we can take all following providers
-
-                    if (!(provider instanceof UserCountMethodsProvider)) {
-                        logger.tracef("We encountered a provider (%s) that does not implement count queries therefore we can't say how many users it can provide.", provider.getClass().getSimpleName());
-                        // for this reason we need to start querying this provider and all following providers
-                        droppingProviders.set(false);
-                        needsAdditionalFirstResultFiltering.set(true);
-                        return true; // don't filter out this provider because we are unable to say how many users it can provide
-                    }
-
-                    long expectedNumberOfUsersForProvider = countQuery.query(provider, 0, currentFirst.get() + 1); // check how many users we can obtain from this provider
-                    logger.tracef("This provider (%s) is able to return %d users.", provider.getClass().getSimpleName(), expectedNumberOfUsersForProvider);
-
-                    if (expectedNumberOfUsersForProvider == currentFirst.get()) { // This provider provides exactly the amount of users we need for passing firstResult, we can set currentFirst to 0 and drop this provider
-                        currentFirst.set(0);
-                        droppingProviders.set(false);
-                        return false;
-                    }
-
-                    if (expectedNumberOfUsersForProvider > currentFirst.get()) { // If we can obtain enough enough users from this provider to fulfill our need we can stop dropping providers
-                        droppingProviders.set(false);
-                        return true; // don't filter out this provider because we are going to return some users from it
-                    }
-
-                    logger.tracef("This provider (%s) cannot provide enough users to pass firstResult so we are going to filter it out and change "
-                            + "firstResult for next provider: %d - %d = %d", provider.getClass().getSimpleName(),
-                            currentFirst.get(), expectedNumberOfUsersForProvider, currentFirst.get() - expectedNumberOfUsersForProvider);
-                    currentFirst.set((int) (currentFirst.get() - expectedNumberOfUsersForProvider));
-                    return false;
-                })
-                // collecting stream of providers to ensure the filtering (above) is evaluated before we move forward to actual querying
-                .collect(Collectors.toList()).stream();
+        if (firstResult == null || firstResult <= 0) {
+            // we don't have a first result set, so we start from the beginning and go through all providers.
+            var providers = Stream.concat(Stream.of(localStorage()), concatExternalWithFederated(storageProviders, 0, requiresFederatedStorage));
+            return queryProviders(providers, pagedQuery, 0, maxResults, false);
         }
 
-        if (needsAdditionalFirstResultFiltering.get() && currentFirst.get() > 0) {
-            logger.tracef("In the providerStream there is a provider that does not support count queries and we need to skip some users.");
-            // we need to make sure, we skip firstResult users from this or the following providers
-            if (maxResults == null || maxResults < 0) {
-                return paginatedStream(providersStream
-                        .flatMap(provider -> pagedQuery.query(provider, null, null)), currentFirst.get(), null);
-            } else {
-                final AtomicInteger currentMax = new AtomicInteger(currentFirst.get() + maxResults);
-
-                return paginatedStream(providersStream
-                    .flatMap(provider -> pagedQuery.query(provider, null, currentMax.get()))
-                    .peek(userModel -> {
-                        currentMax.updateAndGet(i -> i > 0 ? i - 1 : i);
-                    }), currentFirst.get(), maxResults);
+        if (storageProviders.isEmpty()) {
+            if (requiresFederatedStorage) {
+                // we need to count the database.
+                return queryLocalAndFederatedStorage(pagedQuery, countQuery, firstResult, maxResults);
             }
+            // fast path, stream from the database only without counting anything.
+            return queryLocalStorage(pagedQuery, firstResult, maxResults);
         }
 
-        // Actual user querying
+        var localStorage = localStorage();
+        var count = countQueryWithGracefulDegradation(localStorage, countQuery, 0, firstResult + 1);
+
+        if (count > firstResult) {
+            // we need some users from the database
+            var providers = Stream.concat(Stream.of(localStorage()), concatExternalWithFederated(storageProviders, 0, requiresFederatedStorage));
+            return queryProviders(providers, pagedQuery, firstResult, maxResults, false);
+        }
+
+        if (count == firstResult) {
+            // we have the exact users in the database
+            // we don't need to count anything else, and we start from the first external storage provider.
+            var providers = concatExternalWithFederated(storageProviders, 0, requiresFederatedStorage);
+            return queryProviders(providers, pagedQuery, 0, maxResults, false);
+        }
+
+        // we need to count the external providers
+        firstResult -= count;
+        int lastProviderToCount = requiresFederatedStorage ?
+                storageProviders.size():
+                storageProviders.size() - 1;
+        int startIdx = 0;
+
+        for (; startIdx < lastProviderToCount; ++startIdx) {
+            var provider = storageProviders.get(startIdx);
+            if (!(provider instanceof UserCountMethodsProvider)) {
+                assert firstResult > 0;
+                Stream<?> providers = concatExternalWithFederated(storageProviders, startIdx, requiresFederatedStorage);
+                return queryProviders(providers, pagedQuery, firstResult, maxResults, true);
+            }
+            count = countQueryWithGracefulDegradation(storageProviders.get(startIdx), countQuery, 0, firstResult + 1);
+            if (count > firstResult) {
+                // we start on this provider as we need some users from it.
+                break;
+            }
+            if (count == firstResult) {
+                // exact users required to offset, start querying the next provider.
+                startIdx++;
+                firstResult = 0;
+                break;
+            }
+            firstResult -= count;
+        }
+
+        var providers = concatExternalWithFederated(storageProviders, startIdx, requiresFederatedStorage);
+        return queryProviders(providers, pagedQuery, firstResult, maxResults, false);
+    }
+
+    private Stream<UserModel> queryLocalAndFederatedStorage(PaginatedQuery pagedQuery, CountQuery countQuery, int firstResult, Integer maxResults) {
+        assert firstResult > 0;
+        var localStorage = localStorage();
+        // check how many users we can obtain from the local provider
+        var count = countQueryWithGracefulDegradation(localStorage, countQuery, 0, firstResult + 1);
+
+        if (count <= firstResult) {
+            // local provider does not have enough user to skip the first users, querying the federated provider only.
+            return queryProviders(Stream.of(getFederatedStorage()), pagedQuery, firstResult - count, maxResults, false);
+        }
+
+        return queryProviders(Stream.of(localStorage, getFederatedStorage()), pagedQuery, firstResult, maxResults, false);
+    }
+
+    private Stream<UserModel> queryLocalStorage(PaginatedQuery pagedQuery, int firstResult, Integer maxResults) {
+        assert firstResult > 0;
+        return queryWithGracefulDegradation(localStorage(), pagedQuery, firstResult, maxResults);
+    }
+
+    private static Stream<UserModel> queryProviders(Stream<?> providersStream, PaginatedQuery pagedQuery, int offset, Integer maxResults, boolean useStreamSkip) {
+        var firstResults = useStreamSkip ? new AtomicInteger(0) : new AtomicInteger(offset);
         if (maxResults == null || maxResults < 0) {
-            // No maxResult set, we want all users
-            return providersStream
-                    .flatMap(provider -> pagedQuery.query(provider, currentFirst.getAndSet(0), null));
-        } else {
-            final AtomicInteger currentMax = new AtomicInteger(maxResults);
-
-            // Query users with currentMax variable counting how many users we return
-            return providersStream
-                    .filter(provider -> currentMax.get() != 0) // If we reach currentMax == 0, we can skip querying all following providers
-                    .flatMap(provider -> pagedQuery.query(provider, currentFirst.getAndSet(0), currentMax.get()))
-                    .peek(userModel -> {
-                        currentMax.updateAndGet(i -> i > 0 ? i - 1 : i);
-                    });
+            var users = providersStream
+                    .flatMap(provider -> queryWithGracefulDegradation(provider, pagedQuery, firstResults.getAndSet(0), null));
+            return useStreamSkip ? users.skip(offset) : users;
         }
 
+        var currentMax = useStreamSkip ?
+                new AtomicInteger(offset + maxResults) :
+                new AtomicInteger(maxResults);
+
+        // Query users with currentMax variable counting how many users we return
+        var users = providersStream
+                .filter(provider -> currentMax.get() != 0) // If we reach currentMax == 0, we can skip querying all following providers
+                .flatMap(provider -> queryWithGracefulDegradation(provider, pagedQuery, firstResults.getAndSet(0), currentMax.get()))
+                .peek(userModel -> currentMax.updateAndGet(i -> i > 0 ? i - 1 : i));
+        return useStreamSkip ? users.skip(offset).limit(maxResults) : users.limit(maxResults);
+    }
+
+    private Stream<?> concatExternalWithFederated(List<?> externalStorage, int startIdx, boolean requiresFederatedStorage) {
+        Stream<?> providers = externalStorage.subList(startIdx, externalStorage.size()).stream();
+        return requiresFederatedStorage ?
+                Stream.concat(providers, Stream.of(getFederatedStorage())) :
+                providers;
+    }
+
+    /**
+     * Executes a query against a user storage provider with graceful degradation.
+     * If the provider throws an exception, logs the error and returns an empty stream
+     * to allow other providers to continue functioning.
+     */
+    private static Stream<UserModel> queryWithGracefulDegradation(Object provider, PaginatedQuery pagedQuery,
+                                                          Integer firstResult, Integer maxResults) {
+        try {
+            return pagedQuery.query(provider, firstResult, maxResults);
+        } catch (Exception e) {
+            // Log the failure but continue with other providers for graceful degradation
+            logger.warnf(e, "User storage provider %s failed during query operation. " +
+                         "Continuing with other providers for graceful degradation. " +
+                         "This may indicate an issue with external user store connectivity (e.g., LDAP server down).",
+                         provider.getClass().getSimpleName());
+            return Stream.empty();
+        }
+    }
+
+    /**
+     * Executes a count query against a user storage provider with graceful degradation.
+     * If the provider throws an exception, logs the error and returns 0
+     * to allow other providers to continue functioning.
+     */
+    private int countQueryWithGracefulDegradation(Object provider, CountQuery countQuery, 
+                                                 Integer firstResult, Integer maxResults) {
+        try {
+            return countQuery.query(provider, firstResult, maxResults);
+        } catch (Exception e) {
+            // Log the failure but continue with other providers for graceful degradation
+            logger.warnf(e, "User storage provider %s failed during count operation. " +
+                         "Continuing with other providers for graceful degradation. " +
+                         "This may indicate an issue with external user store connectivity (e.g., LDAP server down).",
+                         provider.getClass().getSimpleName());
+            return 0;
+        }
+    }
+
+    /**
+     * Helper method to get total user count from local storage plus all federated storage providers
+     * with graceful degradation.
+     */
+    private int getTotalUserCountWithGracefulDegradation(RealmModel realm, 
+                                                        java.util.function.Function<Object, Integer> countFunction) {
+        // Count users from local storage
+        int localCount = countFunction.apply(localStorage());
+        
+        // Count users from all enabled storage providers with graceful degradation
+        Stream<Object> providers = getEnabledStorageProviders(realm, Object.class);
+        
+        int federatedCount = providers
+            .mapToInt(provider -> countQueryWithGracefulDegradation(provider, 
+                (p, firstResult, maxResults) -> countFunction.apply(p), null, null))
+            .sum();
+            
+        return localCount + federatedCount;
     }
 
     // removeDuplicates method may cause concurrent issues, it should not be used on parallel streams
@@ -409,7 +540,7 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
         StorageId storageId = new StorageId(id);
         if (storageId.getProviderId() == null) {
             UserModel user = localStorage().getUserById(realm, id);
-            return importValidation(realm, user);
+            return validateUser(realm, user);
         }
 
         UserLookupProvider provider = getStorageProviderInstance(realm, storageId.getProviderId(), UserLookupProvider.class);
@@ -420,28 +551,16 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
 
     @Override
     public UserModel getUserByUsername(RealmModel realm, String username) {
-        UserModel user = localStorage().getUserByUsername(realm, username);
-        if (user != null) {
-            return importValidation(realm, user);
-        }
-
-        return mapEnabledStorageProvidersWithTimeout(realm, UserLookupProvider.class,
-                provider -> provider.getUserByUsername(realm, username)).findFirst().orElse(null);
+        return getUserByAttribute(realm,
+                provider -> provider.getUserByUsername(realm, username),
+                u -> username.equalsIgnoreCase(u.getUsername()));
     }
 
     @Override
     public UserModel getUserByEmail(RealmModel realm, String email) {
-        UserModel user = localStorage().getUserByEmail(realm, email);
-        if (user != null) {
-            user = importValidation(realm, user);
-            // Case when email was changed directly in the userStorage and doesn't correspond anymore to the email from local DB
-            if (user != null && email.equalsIgnoreCase(user.getEmail())) {
-                return user;
-            }
-        }
-
-        return mapEnabledStorageProvidersWithTimeout(realm, UserLookupProvider.class,
-                provider -> provider.getUserByEmail(realm, email)).findFirst().orElse(null);
+        return getUserByAttribute(realm,
+                provider -> provider.getUserByEmail(realm, email),
+                u -> email.equalsIgnoreCase(u.getEmail()));
     }
 
     /** {@link UserLookupProvider} methods implementations end here
@@ -465,7 +584,7 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
                     }
                     return 0;
                 },
-                realm, firstResult, maxResults);
+                realm, firstResult, maxResults, true);
 
         return importValidation(realm, results);
     }
@@ -530,29 +649,54 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
         return getUsersCount(realm, false);
     }
 
-    @Override // TODO: missing storageProviders count?
+    @Override
     public int getUsersCount(RealmModel realm, Set<String> groupIds) {
-        return localStorage().getUsersCount(realm, groupIds);
+        return getTotalUserCountWithGracefulDegradation(realm, provider -> {
+            if (provider instanceof UserCountMethodsProvider) {
+                return ((UserCountMethodsProvider) provider).getUsersCount(realm, groupIds);
+            }
+            return 0;
+        });
     }
 
-    @Override // TODO: missing storageProviders count?
+    @Override
     public int getUsersCount(RealmModel realm, String search) {
-        return localStorage().getUsersCount(realm, search);
+        return getTotalUserCountWithGracefulDegradation(realm, provider -> {
+            if (provider instanceof UserCountMethodsProvider) {
+                return ((UserCountMethodsProvider) provider).getUsersCount(realm, search);
+            }
+            return 0;
+        });
     }
 
-    @Override // TODO: missing storageProviders count?
+    @Override
     public int getUsersCount(RealmModel realm, String search, Set<String> groupIds) {
-        return localStorage().getUsersCount(realm, search, groupIds);
+        return getTotalUserCountWithGracefulDegradation(realm, provider -> {
+            if (provider instanceof UserCountMethodsProvider) {
+                return ((UserCountMethodsProvider) provider).getUsersCount(realm, search, groupIds);
+            }
+            return 0;
+        });
     }
 
-    @Override // TODO: missing storageProviders count?
+    @Override
     public int getUsersCount(RealmModel realm, Map<String, String> params) {
-        return localStorage().getUsersCount(realm, params);
+        return getTotalUserCountWithGracefulDegradation(realm, provider -> {
+            if (provider instanceof UserCountMethodsProvider) {
+                return ((UserCountMethodsProvider) provider).getUsersCount(realm, params);
+            }
+            return 0;
+        });
     }
 
-    @Override // TODO: missing storageProviders count?
+    @Override
     public int getUsersCount(RealmModel realm, Map<String, String> params, Set<String> groupIds) {
-        return localStorage().getUsersCount(realm, params, groupIds);
+        return getTotalUserCountWithGracefulDegradation(realm, provider -> {
+            if (provider instanceof UserCountMethodsProvider) {
+                return ((UserCountMethodsProvider) provider).getUsersCount(realm, params, groupIds);
+            }
+            return 0;
+        });
     }
 
     @Override
@@ -569,7 +713,7 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
             }
             return 0;
         }
-        , realm, firstResult, maxResults);
+                , realm, firstResult, maxResults, false);
         return importValidation(realm, results);
     }
 
@@ -651,7 +795,7 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
 
     @Override
     public void addFederatedIdentity(RealmModel realm, UserModel user, FederatedIdentityModel socialLink) {
-        if (StorageId.isLocalStorage(user)) {
+        if (StorageId.isLocalStorage(user.getId())) {
             localStorage().addFederatedIdentity(realm, user, socialLink);
         } else {
             getFederatedStorage().addFederatedIdentity(realm, user.getId(), socialLink);
@@ -682,7 +826,7 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
 
     @Override
     public void updateFederatedIdentity(RealmModel realm, UserModel federatedUser, FederatedIdentityModel federatedIdentityModel) {
-        if (StorageId.isLocalStorage(federatedUser)) {
+        if (StorageId.isLocalStorage(federatedUser.getId())) {
             localStorage().updateFederatedIdentity(realm, federatedUser, federatedIdentityModel);
         } else {
             getFederatedStorage().updateFederatedIdentity(realm, federatedUser.getId(), federatedIdentityModel);
@@ -692,7 +836,7 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
     @Override
     public boolean removeFederatedIdentity(RealmModel realm, UserModel user, String socialProvider) {
         FederatedIdentityModel federatedIdentityModel;
-        if (StorageId.isLocalStorage(user)) {
+        if (StorageId.isLocalStorage(user.getId())) {
             UserProvider localStorage = localStorage();
             federatedIdentityModel = localStorage.getFederatedIdentity(realm, user, socialProvider);
             localStorage.removeFederatedIdentity(realm, user, socialProvider);
@@ -787,7 +931,7 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
 
     @Override
     public void setNotBeforeForUser(RealmModel realm, UserModel user, int notBefore) {
-        if (StorageId.isLocalStorage(user)) {
+        if (StorageId.isLocalStorage(user.getId())) {
             localStorage().setNotBeforeForUser(realm, user, notBefore);
         } else {
             getFederatedStorage().setNotBeforeForUser(realm, user.getId(), notBefore);
@@ -796,7 +940,7 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
 
     @Override
     public int getNotBeforeOfUser(RealmModel realm, UserModel user) {
-        if (StorageId.isLocalStorage(user)) {
+        if (StorageId.isLocalStorage(user.getId())) {
             return localStorage().getNotBeforeOfUser(realm, user);
         } else {
             return getFederatedStorage().getNotBeforeOfUser(realm, user.getId());
@@ -807,7 +951,7 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
     public UserModel getUserByFederatedIdentity(RealmModel realm, FederatedIdentityModel socialLink) {
         UserModel user = localStorage().getUserByFederatedIdentity(realm, socialLink);
         if (user != null) {
-            return importValidation(realm, user);
+            return validateUser(realm, user);
         }
         if (getFederatedStorage() == null) return null;
         String id = getFederatedStorage().getUserByFederatedIdentity(socialLink, realm);
@@ -823,7 +967,7 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
     @Override
     public Stream<FederatedIdentityModel> getFederatedIdentitiesStream(RealmModel realm, UserModel user) {
         if (user == null) throw new IllegalStateException("Federated user no longer valid");
-        Stream<FederatedIdentityModel> stream = StorageId.isLocalStorage(user) ?
+        Stream<FederatedIdentityModel> stream = StorageId.isLocalStorage(user.getId()) ?
                 localStorage().getFederatedIdentitiesStream(realm, user) : Stream.empty();
         if (getFederatedStorage() != null)
             stream = Stream.concat(stream, getFederatedStorage().getFederatedIdentitiesStream(user.getId(), realm));
@@ -833,7 +977,7 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
     @Override
     public FederatedIdentityModel getFederatedIdentity(RealmModel realm, UserModel user, String socialProvider) {
         if (user == null) throw new IllegalStateException("Federated user no longer valid");
-        if (StorageId.isLocalStorage(user)) {
+        if (StorageId.isLocalStorage(user.getId())) {
             FederatedIdentityModel model = localStorage().getFederatedIdentity(realm, user, socialProvider);
             if (model != null) return model;
         }
@@ -870,8 +1014,7 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
         if (!component.getProviderType().equals(UserStorageProvider.class.getName())) return;
         localStorage().preRemove(realm, component);
         if (getFederatedStorage() != null) getFederatedStorage().preRemove(realm, component);
-        UserStorageSyncManager.notifyToRefreshPeriodicSync(session, realm, new UserStorageProviderModel(component), true);
-
+        StoreSyncEvent.fire(session, realm, component, true);
     }
 
     @Override
@@ -892,14 +1035,14 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
 
     @Override
     public void onCreate(KeycloakSession session, RealmModel realm, ComponentModel model) {
-        ComponentFactory factory = ComponentUtil.getComponentFactory(session, model);
+        ComponentFactory<?, ?> factory = ComponentUtil.getComponentFactory(session, model);
         if (!(factory instanceof UserStorageProviderFactory)) return;
 
         // enlistAfterCompletion(..) as we need to ensure that the realm is available in the system
         session.getTransactionManager().enlistAfterCompletion(new AbstractKeycloakTransaction() {
             @Override
             protected void commitImpl() {
-                UserStorageSyncManager.notifyToRefreshPeriodicSync(session, realm, new UserStorageProviderModel(model), false);
+                StoreSyncEvent.fire(session, realm, model, false);
             }
 
             @Override
@@ -911,25 +1054,28 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
 
     @Override
     public void onUpdate(KeycloakSession session, RealmModel realm, ComponentModel oldModel, ComponentModel newModel) {
-        ComponentFactory factory = ComponentUtil.getComponentFactory(session, newModel);
-        if (!(factory instanceof UserStorageProviderFactory)) return;
-        UserStorageProviderModel old = new UserStorageProviderModel(oldModel);
-        UserStorageProviderModel newP= new UserStorageProviderModel(newModel);
-        if (old.getChangedSyncPeriod() != newP.getChangedSyncPeriod() || old.getFullSyncPeriod() != newP.getFullSyncPeriod()
-                || old.isImportEnabled() != newP.isImportEnabled()) {
-            UserStorageSyncManager.notifyToRefreshPeriodicSync(session, realm, new UserStorageProviderModel(newModel), false);
+        ComponentFactory<?, ?> factory = ComponentUtil.getComponentFactory(session, newModel);
+
+        if (!(factory instanceof UserStorageProviderFactory)) {
+            return;
         }
 
+        UserStorageProviderModel previous = new UserStorageProviderModel(oldModel);
+        UserStorageProviderModel actual= new UserStorageProviderModel(newModel);
+
+        if (isSyncSettingsUpdated(previous, actual)) {
+            StoreSyncEvent.fire(session, realm, actual, false);
+        }
     }
 
     @Override
     public void onCache(RealmModel realm, CachedUserModel user, UserModel delegate) {
-        if (StorageId.isLocalStorage(user)) {
+        if (StorageId.isLocalStorage(user.getId())) {
             if (UserStoragePrivateUtil.userLocalStorage(session) instanceof OnUserCache) {
                 ((OnUserCache)UserStoragePrivateUtil.userLocalStorage(session)).onCache(realm, user, delegate);
             }
         } else {
-            OnUserCache provider = getStorageProviderInstance(realm, StorageId.resolveProviderId(user), OnUserCache.class);
+            OnUserCache provider = getStorageProviderInstance(realm, StorageId.providerId(user.getId()), OnUserCache.class);
             if (provider != null ) {
                 provider.onCache(realm, user, delegate);
             }
@@ -950,6 +1096,11 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
         }
 
         return Collections.emptyList();
+    }
+
+    @Override
+    public UserCredentialManager getUserCredentialManager(UserModel user) {
+        return new org.keycloak.credential.UserCredentialManager(session, session.getContext().getRealm(), user);
     }
 
     private boolean isReadOnlyOrganizationMember(UserModel delegate) {
@@ -990,5 +1141,48 @@ public class UserStorageManager extends AbstractStorageManager<UserStorageProvid
                 return session;
             }
         });
+    }
+
+    private UserModel getUserByAttribute(RealmModel realm, Function<UserLookupProvider, UserModel> loader, Predicate<UserModel> attributeValidator) {
+        // first try the local storage
+        UserModel user = loader.apply(localStorage());
+
+        if (user != null) {
+            // run global user validations
+            UserModel validated = validateUser(realm, user);
+
+            // make sure the attribute is valid
+            if (validated != null && attributeValidator.test(validated)) {
+                return validated;
+            }
+
+            // user or attribute not valid, invalidate cache
+            deleteInvalidUserCache(realm, user);
+        }
+
+        // try to resolve the user from the external storage
+        return tryResolveFederatedUser(realm, loader);
+    }
+
+    private UserModel tryResolveFederatedUser(RealmModel realm, Function<UserLookupProvider, UserModel> loader) {
+        return mapEnabledStorageProvidersWithTimeout(realm, UserLookupProvider.class, provider -> {
+            try {
+                return loader.apply(provider);
+            } catch (StorageUnavailableException e) {
+                logger.warnf(e, "User storage provider %s is unavailable. " +
+                             "Continuing with other providers for graceful degradation.",
+                             provider.getClass().getSimpleName());
+                return null;
+            }
+        })
+        .findFirst()
+        .orElse(null);
+    }
+
+    private boolean isSyncSettingsUpdated(UserStorageProviderModel previous, UserStorageProviderModel actual) {
+        return previous.getChangedSyncPeriod() != actual.getChangedSyncPeriod()
+                || previous.getFullSyncPeriod() != actual.getFullSyncPeriod()
+                || previous.isImportEnabled() != actual.isImportEnabled()
+                || previous.isEnabled() != actual.isEnabled();
     }
 }
