@@ -16,14 +16,17 @@
  */
 package org.keycloak.testsuite.actions;
 
-import org.jboss.arquillian.drone.api.annotation.Drone;
+import java.io.Closeable;
+import java.io.IOException;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+
+import jakarta.mail.MessagingException;
+import jakarta.mail.internet.MimeMessage;
+
 import org.keycloak.admin.client.resource.UserResource;
 import org.keycloak.authentication.actiontoken.verifyemail.VerifyEmailActionToken;
-import org.jboss.arquillian.graphene.page.Page;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
 import org.keycloak.common.Profile;
 import org.keycloak.common.util.KeycloakUriBuilder;
 import org.keycloak.events.Details;
@@ -37,50 +40,46 @@ import org.keycloak.models.utils.KeycloakModelUtils;
 import org.keycloak.representations.idm.EventRepresentation;
 import org.keycloak.representations.idm.RealmRepresentation;
 import org.keycloak.representations.idm.UserRepresentation;
+import org.keycloak.services.managers.AuthenticationSessionManager;
 import org.keycloak.sessions.RootAuthenticationSessionModel;
-import org.keycloak.testsuite.AssertEvents;
 import org.keycloak.testsuite.AbstractTestRealmKeycloakTest;
+import org.keycloak.testsuite.AssertEvents;
 import org.keycloak.testsuite.admin.ApiUtil;
 import org.keycloak.testsuite.arquillian.AuthServerTestEnricher;
-import org.keycloak.testsuite.arquillian.annotation.EnableFeature;
 import org.keycloak.testsuite.cluster.AuthenticationSessionFailoverClusterTest;
 import org.keycloak.testsuite.pages.AppPage;
 import org.keycloak.testsuite.pages.AppPage.RequestType;
-import org.keycloak.testsuite.pages.ProceedPage;
 import org.keycloak.testsuite.pages.ErrorPage;
 import org.keycloak.testsuite.pages.InfoPage;
 import org.keycloak.testsuite.pages.LoginPage;
+import org.keycloak.testsuite.pages.ProceedPage;
 import org.keycloak.testsuite.pages.RegisterPage;
 import org.keycloak.testsuite.pages.VerifyEmailPage;
 import org.keycloak.testsuite.pages.VerifyProfilePage;
 import org.keycloak.testsuite.updaters.UserAttributeUpdater;
+import org.keycloak.testsuite.util.AccountHelper;
 import org.keycloak.testsuite.util.GreenMailRule;
 import org.keycloak.testsuite.util.InfinispanTestTimeServiceRule;
+import org.keycloak.testsuite.util.MailUtils;
 import org.keycloak.testsuite.util.SecondBrowser;
-import org.keycloak.testsuite.util.UserBuilder;
-import org.keycloak.testsuite.util.AccountHelper;
 import org.keycloak.testsuite.util.TestAppHelper;
 import org.keycloak.testsuite.util.UserActionTokenBuilder;
-import org.keycloak.testsuite.util.MailUtils;
-
-import java.io.Closeable;
-import jakarta.mail.MessagingException;
-import jakarta.mail.internet.MimeMessage;
-import java.io.IOException;
-import java.net.URISyntaxException;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import org.keycloak.testsuite.util.UserBuilder;
+import org.keycloak.testsuite.util.oauth.OAuthClient;
 
 import org.hamcrest.Matchers;
+import org.jboss.arquillian.drone.api.annotation.Drone;
+import org.jboss.arquillian.graphene.page.Page;
+import org.junit.Assert;
 import org.junit.Assume;
-import org.keycloak.testsuite.util.WaitUtils;
+import org.junit.Before;
+import org.junit.Rule;
+import org.junit.Test;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
+
+import static org.keycloak.authentication.requiredactions.VerifyEmail.EMAIL_RESEND_COOLDOWN_KEY_PREFIX;
 
 import static org.hamcrest.CoreMatchers.notNullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -149,6 +148,13 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
                 .emailVerified(false)
                 .email("test-user@localhost").build();
         testUserId = ApiUtil.createUserAndResetPasswordWithAdminClient(testRealm(), user, "password");
+
+        clearCooldownForUser();
+    }
+
+    private void clearCooldownForUser() {
+        String cooldownKey = EMAIL_RESEND_COOLDOWN_KEY_PREFIX + testUserId;
+        testingClient.server().run(session -> session.singleUseObjects().remove(cooldownKey));
     }
 
     protected boolean removeVerifyProfileAtImport() {
@@ -160,7 +166,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
      * see KEYCLOAK-4163
      */
     @Test
-    public void verifyEmailConfig() throws IOException, MessagingException {
+    public void verifyEmailConfig() throws MessagingException {
 
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
@@ -179,7 +185,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailExisting() throws IOException, MessagingException {
+    public void verifyEmailExisting() throws IOException {
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
@@ -211,7 +217,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailRegister() throws IOException, MessagingException {
+    public void verifyEmailRegister() throws IOException {
         loginPage.open();
         loginPage.clickRegister();
         registerPage.register("firstName", "lastName", "email@mail.com", "verifyEmail", "password", "password");
@@ -244,7 +250,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailRegisterSetLocale() throws IOException, MessagingException {
+    public void verifyEmailRegisterSetLocale() throws IOException {
         RealmRepresentation realm = testRealm().toRepresentation();
         realm.setInternationalizationEnabled(true);
         realm.setSupportedLocales(Set.of("en", "pt"));
@@ -318,7 +324,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailResend() throws IOException, MessagingException {
+    public void verifyEmailResend() throws IOException {
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
@@ -331,6 +337,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
           .assertEvent();
         String mailCodeId = sendEvent.getDetails().get(Details.CODE_ID);
 
+        clearCooldownForUser();
         verifyEmailPage.clickResendEmail();
         verifyEmailPage.assertCurrent();
 
@@ -360,7 +367,29 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailResendWithRefreshes() throws IOException, MessagingException {
+    public void verifyEmailResendTooFast() {
+        loginPage.open();
+        loginPage.login("test-user@localhost", "password");
+
+        verifyEmailPage.assertCurrent();
+        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+
+        verifyEmailPage.clickResendEmail();
+        assertThat(verifyEmailPage.getFeedbackText(), Matchers.containsString("You must wait"));
+        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+
+        try {
+            setTimeOffset(40);
+            verifyEmailPage.clickResendEmail();
+            Assert.assertEquals(2, greenMail.getReceivedMessages().length);
+        } finally {
+            setTimeOffset(0);
+        }
+
+    }
+
+    @Test
+    public void verifyEmailResendWithRefreshes() throws IOException {
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
@@ -374,6 +403,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
           .assertEvent();
         String mailCodeId = sendEvent.getDetails().get(Details.CODE_ID);
 
+        clearCooldownForUser();
         verifyEmailPage.clickResendEmail();
         verifyEmailPage.assertCurrent();
         driver.navigate().refresh();
@@ -404,11 +434,12 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailResendFirstStillValidEvenWithSecond() throws IOException, MessagingException {
+    public void verifyEmailResendFirstStillValidEvenWithSecond() throws IOException {
         // Email verification can be performed any number of times
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
+        clearCooldownForUser();
         verifyEmailPage.clickResendEmail();
         verifyEmailPage.assertCurrent();
 
@@ -438,11 +469,12 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailResendFirstAndSecondStillValid() throws IOException, MessagingException {
+    public void verifyEmailResendFirstAndSecondStillValid() throws IOException {
         // Email verification can be performed any number of times
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
+        clearCooldownForUser();
         verifyEmailPage.clickResendEmail();
         verifyEmailPage.assertCurrent();
 
@@ -466,10 +498,11 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailResendAndVerifyWithLatestLink() throws IOException, MessagingException {
+    public void verifyEmailResendAndVerifyWithLatestLink() throws IOException {
         // Email verification can be performed any number of times
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
+        clearCooldownForUser();
         verifyEmailPage.clickResendEmail();
         verifyEmailPage.assertCurrent();
         Assert.assertEquals(2, greenMail.getReceivedMessages().length);
@@ -486,7 +519,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailNewBrowserSession() throws IOException, MessagingException {
+    public void verifyEmailNewBrowserSession() throws IOException {
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
@@ -525,7 +558,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailInvalidKeyInVerficationLink() throws IOException, MessagingException {
+    public void verifyEmailInvalidKeyInVerficationLink() throws IOException {
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
@@ -556,7 +589,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailExpiredCode() throws IOException, MessagingException {
+    public void verifyEmailExpiredCode() throws IOException {
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
@@ -592,9 +625,9 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailExpiredCodedPerActionLifespan() throws IOException, MessagingException {
+    public void verifyEmailExpiredCodedPerActionLifespan() throws IOException {
         RealmRepresentation realmRep = testRealm().toRepresentation();
-        Map<String, String> originalAttributes = Collections.unmodifiableMap(new HashMap<>(realmRep.getAttributes()));
+        Map<String, String> originalAttributes = Map.copyOf(realmRep.getAttributes());
 
         realmRep.setAttributes(UserActionTokenBuilder.create().verifyEmailLifespan(60).build());
         testRealm().update(realmRep);
@@ -636,9 +669,9 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailExpiredCodedPerActionMultipleTimeouts() throws IOException, MessagingException {
+    public void verifyEmailExpiredCodedPerActionMultipleTimeouts() throws IOException {
         RealmRepresentation realmRep = testRealm().toRepresentation();
-        Map<String, String> originalAttributes = Collections.unmodifiableMap(new HashMap<>(realmRep.getAttributes()));
+        Map<String, String> originalAttributes = Map.copyOf(realmRep.getAttributes());
 
         //Make sure that one attribute settings won't affect the other
         realmRep.setAttributes(UserActionTokenBuilder.create().verifyEmailLifespan(60).resetCredentialsLifespan(300).build());
@@ -681,7 +714,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailExpiredCodeAndExpiredSession() throws IOException, MessagingException {
+    public void verifyEmailExpiredCodeAndExpiredSession() throws IOException {
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
@@ -719,17 +752,17 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
 
-    public static String getEmailLink(MimeMessage message) throws IOException, MessagingException {
+    public static String getEmailLink(MimeMessage message) throws IOException {
         return MailUtils.getPasswordResetEmailLink(message);
     }
 
     // https://issues.jboss.org/browse/KEYCLOAK-5861
     @Test
-    public void verifyEmailNewBrowserSessionWithClientRedirect() throws URISyntaxException, IOException, MessagingException {
+    public void verifyEmailNewBrowserSessionWithClientRedirect() throws IOException {
         try (Closeable u = new UserAttributeUpdater(testRealm().users().get(testUserId))
           .setEmailVerified(false)
           .update()) {
-            testRealm().users().get(testUserId).executeActionsEmail(Arrays.asList(RequiredAction.VERIFY_EMAIL.name()));
+            testRealm().users().get(testUserId).executeActionsEmail(List.of(RequiredAction.VERIFY_EMAIL.name()));
 
             Assert.assertEquals(1, greenMail.getReceivedMessages().length);
             MimeMessage message = greenMail.getLastReceivedMessage();
@@ -753,7 +786,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailNewBrowserSessionPreserveClient() throws IOException, MessagingException {
+    public void verifyEmailNewBrowserSessionPreserveClient() throws IOException {
         loginPage.open();
         loginPage.login("test-user@localhost", "password");
 
@@ -786,7 +819,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailDuringAuthFlow() throws IOException, MessagingException {
+    public void verifyEmailDuringAuthFlow() throws IOException {
         try (Closeable u = new UserAttributeUpdater(testRealm().users().get(testUserId))
                 .setEmailVerified(false)
                 .setRequiredActions(RequiredAction.VERIFY_EMAIL)
@@ -810,12 +843,12 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailDuringAuthFlowFirstClickLink() throws IOException, MessagingException {
+    public void verifyEmailDuringAuthFlowFirstClickLink() throws IOException {
         try (Closeable u = new UserAttributeUpdater(testRealm().users().get(testUserId))
                 .setEmailVerified(false)
                 .setRequiredActions(RequiredAction.VERIFY_EMAIL)
                 .update()) {
-            testRealm().users().get(testUserId).executeActionsEmail(Arrays.asList(RequiredAction.VERIFY_EMAIL.name()));
+            testRealm().users().get(testUserId).executeActionsEmail(List.of(RequiredAction.VERIFY_EMAIL.name()));
 
             Assert.assertEquals(1, greenMail.getReceivedMessages().length);
             MimeMessage message = greenMail.getLastReceivedMessage();
@@ -835,12 +868,12 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailClickLinkRequiredActionsCleared() throws IOException, MessagingException {
+    public void verifyEmailClickLinkRequiredActionsCleared() throws IOException {
         try (Closeable u = new UserAttributeUpdater(testRealm().users().get(testUserId))
                 .setEmailVerified(true)
                 .setRequiredActions()
                 .update()) {
-            testRealm().users().get(testUserId).executeActionsEmail(Arrays.asList(RequiredAction.VERIFY_EMAIL.name()));
+            testRealm().users().get(testUserId).executeActionsEmail(List.of(RequiredAction.VERIFY_EMAIL.name()));
 
             Assert.assertEquals(1, greenMail.getReceivedMessages().length);
             MimeMessage message = greenMail.getLastReceivedMessage();
@@ -860,7 +893,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailDuringAuthFlowAfterLogout() throws URISyntaxException, IOException, MessagingException {
+    public void verifyEmailDuringAuthFlowAfterLogout() throws IOException {
         try (Closeable u = new UserAttributeUpdater(testRealm().users().get(testUserId))
                 .setEmailVerified(true)
                 .update()) {
@@ -877,7 +910,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailDuringAuthFlowAfterRefresh() throws URISyntaxException, IOException, MessagingException {
+    public void verifyEmailDuringAuthFlowAfterRefresh() throws IOException {
         try (Closeable u = new UserAttributeUpdater(testRealm().users().get(testUserId))
                 .setEmailVerified(true)
                 .update()) {
@@ -896,7 +929,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
             driver2.findElement(By.id("password")).sendKeys("password");
             driver2.findElement(By.id("password")).submit();
 
-            assertThat(driver2.getCurrentUrl(), Matchers.startsWith(oauth.APP_AUTH_ROOT));
+            assertThat(driver2.getCurrentUrl(), Matchers.startsWith(OAuthClient.APP_AUTH_ROOT));
 
             // Admin: set required action to VERIFY_EMAIL
             try (Closeable u1 = new UserAttributeUpdater(testRealm().users().get(testUserId))
@@ -905,7 +938,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
                     .update()) {
                 // Browser 2: Refresh window
                 driver2.navigate().refresh();
-                assertThat(driver2.getCurrentUrl(), Matchers.startsWith(oauth.APP_AUTH_ROOT));
+                assertThat(driver2.getCurrentUrl(), Matchers.startsWith(OAuthClient.APP_AUTH_ROOT));
 
                 // Browser 1: Logout
                 testAppHelper.logout();
@@ -942,7 +975,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailWhileLoggedIn() throws IOException, MessagingException {
+    public void verifyEmailWhileLoggedIn() throws IOException {
         UserAttributeUpdater userAttributeUpdater = new UserAttributeUpdater(testRealm().users().get(testUserId));
         userAttributeUpdater.setEmailVerified(true).update();
 
@@ -974,7 +1007,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailViaAuthSessionWhileLoggedIn() throws IOException, MessagingException {
+    public void verifyEmailViaAuthSessionWhileLoggedIn() throws IOException {
         Assume.assumeTrue("Works only on auth-server-undertow",
                 AuthServerTestEnricher.AUTH_SERVER_CONTAINER.equals(AuthServerTestEnricher.AUTH_SERVER_CONTAINER_DEFAULT));
 
@@ -987,7 +1020,9 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
         String realmId = testRealm().toRepresentation().getId();
         testingClient.server().run(session -> {
             RealmModel realm = session.realms().getRealm(realmId);
-            RootAuthenticationSessionModel ras = session.authenticationSessions().getRootAuthenticationSession(realm, authSessionId);
+            session.getContext().setRealm(realm);
+            RootAuthenticationSessionModel ras = session.authenticationSessions()
+                    .getRootAuthenticationSession(realm, new AuthenticationSessionManager(session).decodeBase64AndValidateSignature(authSessionId));
             assertThat("Expecting single auth session", ras.getAuthenticationSessions().keySet(), Matchers.hasSize(1));
             ras.getAuthenticationSessions().forEach((id, as) -> as.addRequiredAction(RequiredAction.VERIFY_EMAIL));
         });
@@ -1013,7 +1048,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailInNewBrowserWhileLoggedInFirstBrowser() throws IOException, MessagingException {
+    public void verifyEmailInNewBrowserWhileLoggedInFirstBrowser() throws IOException {
         UserAttributeUpdater userAttributeUpdater = new UserAttributeUpdater(testRealm().users().get(testUserId));
         userAttributeUpdater.setEmailVerified(true).update();
 
@@ -1061,7 +1096,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailExpiredRegistration() throws IOException, MessagingException {
+    public void verifyEmailExpiredRegistration() throws IOException {
         final String COMMON_ATTR = "verifyEmailRegistrationUser";
 
         driver.navigate().to(oauth.registrationForm().build());
@@ -1113,7 +1148,6 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    @EnableFeature(value = Profile.Feature.UPDATE_EMAIL, skipRestart = true)
     public void actionTokenWithInvalidRequiredActions() throws IOException {
         // Send email with required action
         testRealm().users().get(testUserId).executeActionsEmail(List.of(RequiredAction.UPDATE_EMAIL.name()));
