@@ -17,15 +17,44 @@
 
 package org.keycloak.testsuite.model.session;
 
-import org.junit.Assert;
-import org.junit.Assume;
-import org.junit.Test;
+import java.time.Duration;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.concurrent.BrokenBarrierException;
+import java.util.concurrent.CyclicBarrier;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Function;
+import java.util.function.IntFunction;
+import java.util.stream.IntStream;
+import java.util.stream.Stream;
+
+import jakarta.persistence.EntityManager;
+
 import org.keycloak.OAuth2Constants;
+import org.keycloak.common.Profile;
 import org.keycloak.common.util.MultiSiteUtils;
 import org.keycloak.common.util.Time;
+import org.keycloak.connections.infinispan.InfinispanConnectionProvider;
+import org.keycloak.connections.jpa.JpaConnectionProvider;
+import org.keycloak.events.Details;
+import org.keycloak.events.Event;
+import org.keycloak.events.EventStoreProvider;
+import org.keycloak.events.EventType;
 import org.keycloak.infinispan.util.InfinispanUtils;
 import org.keycloak.models.AuthenticatedClientSessionModel;
 import org.keycloak.models.ClientModel;
+import org.keycloak.models.Constants;
 import org.keycloak.models.KeycloakSession;
 import org.keycloak.models.RealmModel;
 import org.keycloak.models.RealmProvider;
@@ -35,37 +64,43 @@ import org.keycloak.models.UserProvider;
 import org.keycloak.models.UserSessionModel;
 import org.keycloak.models.UserSessionProvider;
 import org.keycloak.models.jpa.session.JpaUserSessionPersisterProvider;
+import org.keycloak.models.jpa.session.JpaUserSessionPersisterProviderFactory;
+import org.keycloak.models.jpa.session.PersistentUserSessionEntity;
 import org.keycloak.models.session.UserSessionPersisterProvider;
 import org.keycloak.models.sessions.infinispan.PersistentUserSessionProvider;
+import org.keycloak.models.sessions.infinispan.changes.SessionEntityWrapper;
+import org.keycloak.models.sessions.infinispan.entities.AuthenticatedClientSessionEntity;
+import org.keycloak.models.sessions.infinispan.entities.EmbeddedClientSessionKey;
+import org.keycloak.models.sessions.infinispan.expiration.ExpirationTaskFactory;
+import org.keycloak.models.utils.KeycloakModelUtils;
+import org.keycloak.models.utils.RealmExpiration;
 import org.keycloak.models.utils.ResetTimeOffsetEvent;
 import org.keycloak.protocol.oidc.OIDCLoginProtocol;
 import org.keycloak.protocol.oidc.OIDCLoginProtocolFactory;
 import org.keycloak.services.managers.ClientManager;
 import org.keycloak.services.managers.RealmManager;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
-import static org.hamcrest.MatcherAssert.assertThat;
-import org.keycloak.models.Constants;
-import org.hamcrest.Matchers;
 import org.keycloak.storage.client.ClientStorageProvider;
 import org.keycloak.storage.client.ClientStorageProviderModel;
 import org.keycloak.testsuite.federation.HardcodedClientStorageProviderFactory;
 import org.keycloak.testsuite.model.KeycloakModelTest;
 import org.keycloak.testsuite.model.RequireProvider;
-import java.util.LinkedList;
+
+import org.awaitility.Awaitility;
+import org.hamcrest.Matchers;
+import org.infinispan.Cache;
+import org.junit.Assert;
+import org.junit.Assume;
+import org.junit.Test;
+
+import static org.keycloak.connections.infinispan.InfinispanConnectionProvider.CLIENT_SESSION_CACHE_NAME;
+import static org.keycloak.connections.infinispan.InfinispanConnectionProvider.USER_SESSION_CACHE_NAME;
+import static org.keycloak.models.utils.SessionTimeoutHelper.PERIODIC_CLEANER_IDLE_TIMEOUT_WINDOW_SECONDS;
+
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
 
 /**
  * @author <a href="mailto:mposolda@redhat.com">Marek Posolda</a>
@@ -75,6 +110,7 @@ import java.util.LinkedList;
 @RequireProvider(UserSessionProvider.class)
 @RequireProvider(UserProvider.class)
 @RequireProvider(RealmProvider.class)
+@RequireProvider(EventStoreProvider.class)
 public class UserSessionPersisterProviderTest extends KeycloakModelTest {
 
     private static final int USER_SESSION_COUNT = 2000;
@@ -151,7 +187,8 @@ public class UserSessionPersisterProviderTest extends KeycloakModelTest {
             RealmModel realm = session.realms().getRealm(realmId);
             session.getContext().setRealm(realm);
             ClientModel testApp = realm.getClientByClientId("test-app");
-            session.sessions().getUserSessionsStream(realm, testApp).collect(Collectors.toList())
+            session.sessions().readOnlyStreamUserSessions(realm, testApp, -1, -1)
+                    .toList()
                     .forEach(userSessionLooper -> persistUserSession(session, userSessionLooper, true));
         });
 
@@ -159,12 +196,14 @@ public class UserSessionPersisterProviderTest extends KeycloakModelTest {
             inComittedTransaction(session -> {
                 // Persist 1 online session
                 RealmModel realm = session.realms().getRealm(realmId);
+                session.getContext().setRealm(realm);
                 userSession[0] = session.sessions().getUserSession(realm, origSessions[0].getId());
                 persistUserSession(session, userSession[0], false);
             });
 
             inComittedTransaction(session -> { // Assert online session
                 RealmModel realm = session.realms().getRealm(realmId);
+                session.getContext().setRealm(realm);
                 List<UserSessionModel> loadedSessions = loadPersistedSessionsPaginated(session, false, 1, 1, 1);
                 assertSession(loadedSessions.get(0), session.users().getUserByUsername(realm, "user1"), "127.0.0.1", started, started, "test-app", "third-party");
             });
@@ -173,6 +212,7 @@ public class UserSessionPersisterProviderTest extends KeycloakModelTest {
         inComittedTransaction(session -> {
             // Assert offline sessions
             RealmModel realm = session.realms().getRealm(realmId);
+            session.getContext().setRealm(realm);
             List<UserSessionModel> loadedSessions = loadPersistedSessionsPaginated(session, true, 2, 2, 3);
             assertSessions(loadedSessions, new String[] { origSessions[0].getId(), origSessions[1].getId(), origSessions[2].getId() });
 
@@ -187,10 +227,7 @@ public class UserSessionPersisterProviderTest extends KeycloakModelTest {
         int started = Time.currentTime();
 
         AtomicReference<UserSessionModel[]> origSessionsAt = new AtomicReference<>();
-        AtomicReference<List<UserSessionModel>> loadedSessionsAt = new AtomicReference<>();
-
         AtomicReference<UserSessionModel> userSessionAt = new AtomicReference<>();
-        AtomicReference<UserSessionModel> persistedSessionAt = new AtomicReference<>();
 
         inComittedTransaction(session -> {
             // Create some sessions in infinispan
@@ -212,15 +249,14 @@ public class UserSessionPersisterProviderTest extends KeycloakModelTest {
 
         inComittedTransaction(session -> {
             RealmModel realm = session.realms().getRealm(realmId);
+            session.getContext().setRealm(realm);
 
             UserSessionPersisterProvider persister = session.getProvider(UserSessionPersisterProvider.class);
 
             // Load offline session
             List<UserSessionModel> loadedSessions = loadPersistedSessionsPaginated(session, true, 10, 1, 1);
-            loadedSessionsAt.set(loadedSessions);
 
             UserSessionModel persistedSession = loadedSessions.get(0);
-            persistedSessionAt.set(persistedSession);
 
             assertSession(persistedSession, session.users().getUserByUsername(realm, "user1"), "127.0.0.2", started, started, "test-app");
 
@@ -243,6 +279,7 @@ public class UserSessionPersisterProviderTest extends KeycloakModelTest {
 
         inComittedTransaction(session -> {
             RealmModel realm = session.realms().getRealm(realmId);
+            session.getContext().setRealm(realm);
 
             UserSessionPersisterProvider persister = session.getProvider(UserSessionPersisterProvider.class);
 
@@ -378,6 +415,84 @@ public class UserSessionPersisterProviderTest extends KeycloakModelTest {
     }
 
     @Test
+    public void testClientTimestampUpdate() {
+        final String realmName = "client-test";
+        final String username = "my-user";
+        final String clientId = "my-app";
+        final AtomicReference<String> userSessionID = new AtomicReference<>();
+
+        // create user and client
+        inComittedTransaction(session -> {
+            RealmModel realm = session.realms().createRealm(realmName);
+            session.getContext().setRealm(realm);
+            realm.setDefaultRole(session.roles().addRealmRole(realm, Constants.DEFAULT_ROLES_ROLE_PREFIX));
+
+            realm.addClient(clientId);
+            session.users().addUser(realm, username);
+
+            UserSessionModel userSession = session.sessions().createUserSession(null, realm, session.users().getUserByUsername(realm, username), username, "127.0.0.1", "form", true, null, null, UserSessionModel.SessionPersistenceState.PERSISTENT);
+            userSessionID.set(userSession.getId());
+
+            createClientSession(session, realm.getId(), realm.getClientByClientId(clientId), userSession, "http://redirect", "state");
+        });
+
+        if (InfinispanUtils.isEmbeddedInfinispan()) {
+            // causes https://github.com/keycloak/keycloak/issues/42012
+            inComittedTransaction(session -> {
+                RealmModel realm = session.realms().getRealmByName(realmName);
+                session.getContext().setRealm(realm);
+
+                var cacheKey = new EmbeddedClientSessionKey(userSessionID.get(), realm.getClientByClientId(clientId).getId());
+                Cache<EmbeddedClientSessionKey, SessionEntityWrapper<AuthenticatedClientSessionEntity>> clientSessoinCache = session.getProvider(InfinispanConnectionProvider.class).getCache(CLIENT_SESSION_CACHE_NAME);
+                SessionEntityWrapper<AuthenticatedClientSessionEntity> clientSession = clientSessoinCache.get(cacheKey);
+                assertNotNull(clientSession);
+                assertNotNull(clientSession.getEntity());
+                // user session id is not stored in the cache
+                // when reading from a remote keycloak instance, this field is null
+                // we are simulating a “remote read” here.
+                clientSession.getEntity().setUserSessionId(null);
+            });
+        }
+
+
+        Function<KeycloakSession, Integer> fetchTimestamp = session -> {
+            RealmModel realm = session.realms().getRealmByName(realmName);
+            session.getContext().setRealm(realm);
+
+            ClientModel client = realm.getClientByClientId(clientId);
+            UserSessionModel userSession = session.sessions().getUserSession(realm, userSessionID.get());
+            // read from database!
+            if (Profile.isFeatureEnabled(Profile.Feature.PERSISTENT_USER_SESSIONS)) {
+                return session.getProvider(UserSessionPersisterProvider.class)
+                        .loadClientSession(realm, client, userSession, false)
+                        .getTimestamp();
+            }
+            return session.sessions()
+                    .getClientSession(userSession, client, false)
+                    .getTimestamp();
+        };
+
+        // fetch the current timestamp
+        int currentTimestamp = inComittedTransaction(fetchTimestamp);
+
+        // update timestamp
+        inComittedTransaction(session -> {
+            RealmModel realm = session.realms().getRealmByName(realmName);
+            session.getContext().setRealm(realm);
+
+            ClientModel client = realm.getClientByClientId(clientId);
+            UserSessionModel userSession = session.sessions().getUserSession(realm, userSessionID.get());
+            session.sessions()
+                    .getClientSession(userSession, client, false)
+                    .setTimestamp(currentTimestamp + 10);
+        });
+
+        // check if it is updated
+        int timestamp = inComittedTransaction(fetchTimestamp);
+        assertEquals(currentTimestamp + 10, timestamp);
+    }
+
+    @Test
     public void testOnUserRemoved() {
         int started = Time.currentTime();
         AtomicReference<UserSessionModel[]> origSessionsAt = new AtomicReference<>();
@@ -446,7 +561,7 @@ public class UserSessionPersisterProviderTest extends KeycloakModelTest {
     public void testNoSessions() {
         inComittedTransaction(session -> {
             UserSessionPersisterProvider persister = session.getProvider(UserSessionPersisterProvider.class);
-            Stream<UserSessionModel> sessions = persister.loadUserSessionsStream(0, 1, true, "00000000-0000-0000-0000-000000000000");
+            Stream<UserSessionModel> sessions = persister.loadUserSessionsStream(0, 1, true, "");
             Assert.assertEquals(0, sessions.count());
         });
     }
@@ -466,15 +581,14 @@ public class UserSessionPersisterProviderTest extends KeycloakModelTest {
                 setTimeOffset(i);
 
                 UserSessionModel userSession = session.sessions().createUserSession(null, realm, user, "user1", "127.0.0.1", "form", true, null, null, UserSessionModel.SessionPersistenceState.PERSISTENT);
+                if (userSessionsInner.contains(userSession.getId())) {
+                    Assert.fail("Duplicate session id generated: " + userSession.getId());
+                }
+
                 createClientSession(session, realmId, realm.getClientByClientId("test-app"), userSession, "http://redirect", "state");
                 userSessionsInner.add(userSession.getId());
+                persistUserSession(session, userSession, true);
             }
-
-            for (String userSessionId : userSessionsInner) {
-                UserSessionModel userSession2 = session.sessions().getUserSession(realm, userSessionId);
-                persistUserSession(session, userSession2, true);
-            }
-
             return null;
         });
 
@@ -499,6 +613,48 @@ public class UserSessionPersisterProviderTest extends KeycloakModelTest {
     }
 
     @Test
+    public void testConcurrentSessionCreation() {
+        String userSessionId = withRealm(realmId, (session, realm) -> {
+            UserModel user = session.users().getUserByUsername(realm, "user1");
+            UserSessionModel userSession = session.sessions().createUserSession(null, realm, user, "user1", "127.0.0.1", "form", true, null, null, UserSessionModel.SessionPersistenceState.PERSISTENT);
+            userSession.setNote("ITERATION1", "true");
+            return userSession.getId();
+        });
+
+        // Simulate a concurrently created session
+        withRealm(realmId, (session, realm) -> {
+            UserModel user = session.users().getUserByUsername(realm, "user1");
+            UserSessionModel userSession = session.sessions().createUserSession(userSessionId, realm, user, "user1", "127.0.0.1", "form", true, null, null, UserSessionModel.SessionPersistenceState.PERSISTENT);
+            userSession.setNote("ITERATION2", "true");
+            return null;
+        });
+
+        withRealm(realmId, (session, realm) -> {
+            UserSessionModel userSession = session.sessions().getUserSession(realm, userSessionId);
+            assertThat(userSession.getNote("ITERATION1"), Matchers.equalTo("true"));
+            assertThat(userSession.getNote("ITERATION2"), Matchers.equalTo("true"));
+            return null;
+        });
+
+        if (MultiSiteUtils.isPersistentSessionsEnabled()) {
+            try {
+                // Simulate a concurrently created session with a different user
+                withRealm(realmId, (session, realm) -> {
+                    UserModel user = session.users().getUserByUsername(realm, "user2");
+                    UserSessionModel userSession = session.sessions().createUserSession(userSessionId, realm, user, "user1", "127.0.0.1", "form", true, null, null, UserSessionModel.SessionPersistenceState.PERSISTENT);
+                    userSession.setNote("ITERATION2", "true");
+                    return null;
+                });
+                Assert.fail("Exception expected");
+            } catch (RuntimeException e) {
+                assertThat(e.getMessage(), Matchers.containsString("Maximum number of retries reached"));
+                assertThat(e.getCause().getMessage(), Matchers.containsString("User ID of the session does not match"));
+            }
+        }
+
+    }
+
+    @Test
     public void testExpiredSessions() {
         int started = Time.currentTime();
         final UserSessionModel[] userSession1 = {null};
@@ -519,19 +675,22 @@ public class UserSessionPersisterProviderTest extends KeycloakModelTest {
             persistUserSession(session, userSession2[0], true);
         });
 
-        inComittedTransaction(session -> {
+        int lastSessionRefresh = withRealm(realmId, (session, realm) -> {
             // Update one of the sessions with lastSessionRefresh of 20 days ahead
-            int lastSessionRefresh = Time.currentTime() + 1728000;
-            RealmModel realm = session.realms().getRealm(realmId);
+            int newCurrentTime = Time.currentTime() + 1728000;
             UserSessionPersisterProvider persister = session.getProvider(UserSessionPersisterProvider.class);
 
-            persister.updateLastSessionRefreshes(realm, lastSessionRefresh, Collections.singleton(userSession1[0].getId()), true);
+            persister.updateLastSessionRefreshes(realm, newCurrentTime, Collections.singleton(userSession1[0].getId()), true);
 
+            return newCurrentTime;
+        });
+
+        withRealmConsumer(realmId, (session, realm) -> {
             // Increase time offset - 40 days
             setTimeOffset(3456000);
             try {
                 // Run expiration thread
-                persister.removeExpired(realm);
+                session.getProvider(UserSessionPersisterProvider.class).removeExpired(realm);
 
                 // Test the updated session is still in persister. Not updated session is not there anymore
                 List<UserSessionModel> loadedSessions = loadPersistedSessionsPaginated(session, true, 10, 1, 1);
@@ -590,6 +749,7 @@ public class UserSessionPersisterProviderTest extends KeycloakModelTest {
     }
 
     @Test
+    @Deprecated(since = "26.4", forRemoval = true)
     public void testMigrateSession() {
         Assume.assumeTrue(MultiSiteUtils.isPersistentSessionsEnabled());
         Assume.assumeTrue(InfinispanUtils.isEmbeddedInfinispan());
@@ -612,11 +772,487 @@ public class UserSessionPersisterProviderTest extends KeycloakModelTest {
             // trigger a migration with the entries that are still in the cache
             PersistentUserSessionProvider userSessionProvider = (PersistentUserSessionProvider) session.getProvider(UserSessionProvider.class);
             userSessionProvider.migrateNonPersistentSessionsToPersistentSessions();
-            JpaUserSessionPersisterProvider sessionPersisterProvider = (JpaUserSessionPersisterProvider) session.getProvider(UserSessionPersisterProvider.class);
 
             // verify that import was complete
             Assert.assertEquals(sessions.length, countUserSessionsInRealm(session));
         });
+    }
+
+
+    @Test
+    public void testUserRemoved() throws InterruptedException {
+        final String userName = "to-remove";
+        final int numberOfSessions = 5;
+        final int clusterSize = 4;
+        withRealmConsumer(realmId, (session, realm) -> {
+            session.sessions().removeUserSessions(realm);
+            session.users().addUser(realm, userName).setEmail(userName + "@localhost");
+        });
+
+        final UserSessionCount initial = getUserSessionCount();
+        final CyclicBarrier barrier = new CyclicBarrier(clusterSize);
+        final AtomicBoolean userDeleted = new AtomicBoolean(false);
+
+        inIndependentFactories(clusterSize, 60, () -> {
+            try {
+                barrier.await(10, TimeUnit.SECONDS);
+                withRealmConsumer(realmId, (session, realm) -> {
+                    UserModel user = session.users().getUserByUsername(realm, userName);
+                    ClientModel testApp = realm.getClientByClientId("test-app");
+                    IntStream.range(0, numberOfSessions)
+                            .forEach(ignored -> {
+                                UserSessionModel us = session.sessions().createUserSession(null, realm, user, userName, "127.0.0.1", "form", false, null, null, UserSessionModel.SessionPersistenceState.PERSISTENT);
+                                session.sessions().createClientSession(realm, testApp, us);
+                            });
+                });
+
+                barrier.await(10, TimeUnit.SECONDS);
+                assertSessionCount(numberOfSessions * clusterSize, initial);
+
+                barrier.await(10, TimeUnit.SECONDS);
+                if (userDeleted.compareAndSet(false, true)) {
+                    withRealmConsumer(realmId, (session, realm) -> {
+                        UserModel user = session.users().getUserByUsername(realm, userName);
+                        new UserManager(session).removeUser(realm, user);
+                    });
+                }
+
+                barrier.await(10, TimeUnit.SECONDS);
+                assertSessionCount(0, initial);
+
+                barrier.await(10, TimeUnit.SECONDS);
+            } catch (BrokenBarrierException | TimeoutException e) {
+                throw new RuntimeException(e);
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            }
+        });
+    }
+
+    @Deprecated(since = "26.5", forRemoval = true)
+    @Test
+    public void testUserSessionRememberMeMigration() {
+        Assume.assumeTrue(MultiSiteUtils.isPersistentSessionsEnabled());
+        // It tests if the "remember_me" value is applied from the data to the new column.
+        // To be removed when the field is removed from PersistentUserSessionData.
+
+        List<String> userSessionIds = Arrays.stream((UserSessionModel[]) withRealm(realmId, (session, realm) -> createSessions(session, realmId)))
+                .map(UserSessionModel::getId)
+                .toList();
+
+        // let ensure it has remember_me set to true
+        withRealmConsumer(realmId, (session, realm) -> assertTrue(loadUserSessionDirectlyDatabase(session, userSessionIds.get(0)).isRememberMe()));
+
+        // set the remember_me to false in the database, to simulate a migration.
+        withRealmConsumer(realmId, (session, realm) -> {
+            loadUserSessionDirectlyDatabase(session, userSessionIds.get(0)).setRememberMe(false);
+
+            //no cache with remote infinispan, but we have to clear the embedded cache.
+            if (InfinispanUtils.isEmbeddedInfinispan()) {
+                session.getProvider(InfinispanConnectionProvider.class).getCache(USER_SESSION_CACHE_NAME).clear();
+            }
+        });
+
+        // double-check if the column value is false now.
+        withRealmConsumer(realmId, (session, realm) -> assertFalse(loadUserSessionDirectlyDatabase(session, userSessionIds.get(0)).isRememberMe()));
+
+        // loading the session via UserSessionProvider should update the column
+        withRealmConsumer(realmId, (session, realm) -> assertTrue(session.sessions().getUserSession(realm, userSessionIds.get(0)).isRememberMe()));
+
+        // ensure the column is updated.
+        withRealmConsumer(realmId, (session, realm) -> assertTrue(loadUserSessionDirectlyDatabase(session, userSessionIds.get(0)).isRememberMe()));
+    }
+
+    @Deprecated(since = "26.5", forRemoval = true) // to be removed when remember_me is removed from the data column
+    @Test
+    public void testUserSessionRememberMeMigrationWithExpiration() {
+        Assume.assumeTrue(MultiSiteUtils.isPersistentSessionsEnabled());
+
+        RealmExpiration realmExpiration = withRealm(realmId, (session, realm) -> {
+            // enable remember me
+            realm.setRememberMe(true);
+            RealmExpiration expiration = RealmExpiration.fromRealm(realm);
+
+            // double max-idle and lifespan for remember me
+            realm.setSsoSessionIdleTimeoutRememberMe(expiration.maxIdle() * 2);
+            realm.setSsoSessionMaxLifespanRememberMe(expiration.lifespan() * 2);
+            return expiration;
+        });
+
+        final int initialCount = getPersistedUserSessionsCount();
+        final int sessionCount = JpaUserSessionPersisterProviderFactory.DEFAULT_EXPIRATION_BATCH * 2;
+
+        createSessions(sessionCount, value -> value % 2 == 0);
+        assertEquals(initialCount + sessionCount, getPersistedUserSessionsCount());
+
+        // se the column to null.
+        withRealmConsumer(realmId, (session, realm) -> {
+            EntityManager em = session.getProvider(JpaConnectionProvider.class).getEntityManager();
+            int count = em.createQuery("UPDATE PersistentUserSessionEntity sess SET sess.rememberMe = NULL WHERE sess.realmId = :realmId")
+                    .setParameter("realmId", realmId)
+                    .executeUpdate();
+            assertEquals(sessionCount, count);
+        });
+
+        // trigger expiration, it should perform the migration
+        // because PERIODIC_CLEANER_IDLE_TIMEOUT_WINDOW_SECONDS, nothing should be removed but all session should be migrated and the remember me column must be updated.
+        triggerExpiration(realmExpiration.maxIdle() + 10);
+        assertEquals(initialCount + sessionCount, getPersistedUserSessionsCount());
+
+        // check if everything worked as expected.
+        withRealmConsumer(realmId, (session, realm) -> {
+            EntityManager em = session.getProvider(JpaConnectionProvider.class).getEntityManager();
+            long count = em.createQuery("SELECT count(*) FROM PersistentUserSessionEntity sess WHERE sess.rememberMe IS NOT NULL AND sess.realmId = :realmId", Number.class)
+                    .setParameter("realmId", realmId)
+                    .getSingleResult()
+                    .longValue();
+            assertEquals(sessionCount, count);
+        });
+
+        // lets expire regular sessions
+        triggerExpiration(realmExpiration.maxIdle() + PERIODIC_CLEANER_IDLE_TIMEOUT_WINDOW_SECONDS + 10);
+        assertEquals(initialCount + (sessionCount / 2), getPersistedUserSessionsCount());
+
+        // lets expire regular sessions with remember me
+        triggerExpiration((realmExpiration.maxIdle() * 2) + PERIODIC_CLEANER_IDLE_TIMEOUT_WINDOW_SECONDS + 10);
+        assertEquals(initialCount, getPersistedUserSessionsCount());
+    }
+
+    @Test
+    public void testUserSessionWithRememberMeRemovedAfterRememberMeDisabled() {
+        Assume.assumeTrue(MultiSiteUtils.isPersistentSessionsEnabled());
+
+        RealmExpiration realmExpiration = withRealm(realmId, (session, realm) -> {
+            // enable remember me
+            realm.setRememberMe(true);
+            RealmExpiration expiration = RealmExpiration.fromRealm(realm);
+
+            // double max-idle and lifespan for remember me
+            realm.setSsoSessionIdleTimeoutRememberMe(expiration.maxIdle() * 2);
+            realm.setSsoSessionMaxLifespanRememberMe(expiration.lifespan() * 2);
+            return expiration;
+        });
+
+        String userId = withRealm(realmId, (session, realm) -> {
+            // enable events
+            realm.setEventsEnabled(true);
+            realm.setEnabledEventTypes(Set.of(EventType.USER_SESSION_DELETED.name()));
+            return session.users().getUserByUsername(realm, "user1").getId();
+        });
+
+        final int initialCount = getPersistedUserSessionsCount();
+        final int sessionCount = JpaUserSessionPersisterProviderFactory.DEFAULT_EXPIRATION_BATCH * 2;
+
+        createSessions(sessionCount, value -> value % 2 == 0);
+        assertEquals(initialCount + sessionCount, getPersistedUserSessionsCount());
+
+        withRealmConsumer(realmId, (session, realm) -> {
+            EntityManager em = session.getProvider(JpaConnectionProvider.class).getEntityManager();
+            // se the column to null.
+            int count = em.createQuery("UPDATE PersistentUserSessionEntity sess SET sess.rememberMe = NULL WHERE sess.realmId = :realmId")
+                    .setParameter("realmId", realmId)
+                    .executeUpdate();
+            assertEquals(sessionCount, count);
+            // disable remember me
+            realm.setRememberMe(false);
+        });
+
+        // trigger expiration, it should perform the migration
+        // realm has remember me disabled, so half of the session should be deleted by the expiration job.
+        triggerExpiration(realmExpiration.maxIdle() + 10);
+        assertEquals(initialCount + (sessionCount / 2), getPersistedUserSessionsCount());
+        assertEquals((sessionCount / 2), getUserSessionInvalidRememberMeEventCount(userId));
+
+        // check if everything worked as expected.
+        withRealmConsumer(realmId, (session, realm) -> {
+            EntityManager em = session.getProvider(JpaConnectionProvider.class).getEntityManager();
+            long count = em.createQuery("SELECT count(*) FROM PersistentUserSessionEntity sess WHERE sess.rememberMe IS NOT NULL AND sess.realmId = :realmId", Number.class)
+                    .setParameter("realmId", realmId)
+                    .getSingleResult()
+                    .longValue();
+            assertEquals((sessionCount / 2), count);
+        });
+
+        // lets expire regular sessions
+        triggerExpiration(realmExpiration.maxIdle() + PERIODIC_CLEANER_IDLE_TIMEOUT_WINDOW_SECONDS + 10);
+        assertEquals(initialCount, getPersistedUserSessionsCount());
+
+        // these sessions have remember me column not null.
+        // ensure those are deleted too.
+        createSessions(sessionCount, value -> value % 2 == 0);
+        assertEquals(initialCount + sessionCount, getPersistedUserSessionsCount());
+
+        // clear events
+        withRealmConsumer(realmId, (session, realm) -> session.getProvider(EventStoreProvider.class).clear(realm));
+
+        // realm has remember me disabled, so half of the session should be deleted by the expiration job.
+        triggerExpiration(realmExpiration.maxIdle() + 10);
+        assertEquals(initialCount + (sessionCount / 2), getPersistedUserSessionsCount());
+        assertEquals(sessionCount / 2, getUserSessionInvalidRememberMeEventCount(userId));
+
+        triggerExpiration(realmExpiration.maxIdle() + PERIODIC_CLEANER_IDLE_TIMEOUT_WINDOW_SECONDS + 10);
+        assertEquals(initialCount, getPersistedUserSessionsCount());
+    }
+
+    private PersistentUserSessionEntity loadUserSessionDirectlyDatabase(KeycloakSession session, String userSessionId) {
+        EntityManager em = session.getProvider(JpaConnectionProvider.class).getEntityManager();
+        return  em.createNamedQuery("findUserSession", PersistentUserSessionEntity.class)
+                .setParameter("realmId", realmId)
+                .setParameter("offline", "0")
+                .setParameter("userSessionId", userSessionId)
+                .setParameter("lastSessionRefresh", 0)
+                .setMaxResults(1)
+                .getSingleResult();
+    }
+
+    private UserSessionCount getUserSessionCount() {
+        if (InfinispanUtils.isEmbeddedInfinispan()) {
+            return MultiSiteUtils.isPersistentSessionsEnabled() ?
+                    new UserSessionCount(getPersistedUserSessionsCount(), getEmbeddedCachedUserSessionsCount()) :
+                    new UserSessionCount(-1, getEmbeddedCachedUserSessionsCount());
+
+        }
+        return MultiSiteUtils.isPersistentSessionsEnabled() ?
+                new UserSessionCount(getPersistedUserSessionsCount(), -1) :
+                new UserSessionCount(-1, getRemoteCachedUserSessionsCount());
+    }
+
+    private void assertSessionCount(int offset, UserSessionCount initial) {
+        UserSessionCount current = getUserSessionCount();
+        if (initial.database() != -1) {
+            assertEquals("Wrong number of session in database", initial.database() + offset, current.database());
+        } else {
+            assertEquals("Wrong number of session in database", initial.database(), current.database());
+        }
+        if (initial.cache() != -1) {
+            assertEquals("Wrong number of session in cache", initial.cache() + offset, current.cache());
+        } else {
+            assertEquals("Wrong number of session in cache", initial.cache(), current.cache());
+        }
+    }
+
+    private int getRemoteCachedUserSessionsCount() {
+        return withRealm(realmId, (session, ignored) -> session.getProvider(InfinispanConnectionProvider.class).getRemoteCache(USER_SESSION_CACHE_NAME).size());
+    }
+
+    private int getEmbeddedCachedUserSessionsCount() {
+        return withRealm(realmId, (session, ignored) -> session.getProvider(InfinispanConnectionProvider.class).getCache(USER_SESSION_CACHE_NAME).size());
+    }
+
+    private int getPersistedUserSessionsCount() {
+        return withRealm(realmId, (session, ignored) -> session.getProvider(UserSessionPersisterProvider.class).getUserSessionsCount(false));
+    }
+
+    @Test
+    public void testSessionExpirationBatch() {
+        Assume.assumeTrue(MultiSiteUtils.isPersistentSessionsEnabled());
+        String userId = withRealm(realmId, (session, realm) -> {
+            // enable events
+            realm.setEventsEnabled(true);
+            realm.setEnabledEventTypes(Set.of(EventType.USER_SESSION_DELETED.name()));
+            return session.users().getUserByUsername(realm, "user1").getId();
+        });
+        long eventCount = getUserSessionExpirationEventCount(userId);
+        // it seems some sessions are already present
+        int initialSessions = getPersistedUserSessionsCount();
+        // no sessions
+        eventCount = doExpirationWithSessions(0, initialSessions, eventCount);
+
+        // create half batch size sessions
+        eventCount = doExpirationWithSessions(Math.max(1, JpaUserSessionPersisterProviderFactory.DEFAULT_EXPIRATION_BATCH / 2), initialSessions, eventCount);
+
+        // exactly batch size sessions
+        eventCount = doExpirationWithSessions(JpaUserSessionPersisterProviderFactory.DEFAULT_EXPIRATION_BATCH, initialSessions, eventCount);
+
+        // double batch size sessions
+        doExpirationWithSessions(JpaUserSessionPersisterProviderFactory.DEFAULT_EXPIRATION_BATCH * 2, initialSessions, eventCount);
+    }
+
+    @Test
+    public void testExpirationDistribution() throws InterruptedException {
+        Assume.assumeTrue(MultiSiteUtils.isPersistentSessionsEnabled());
+        closeKeycloakSessionFactory();
+
+        final int clusterSize = 4;
+        final CyclicBarrier barrier = new CyclicBarrier(clusterSize);
+        final AtomicInteger indexGenerator = new AtomicInteger();
+        final AtomicInteger count = new AtomicInteger();
+
+        inIndependentFactories(clusterSize, 60, () -> {
+            try {
+                final boolean primary = indexGenerator.incrementAndGet() == 1;
+                final int sessionCount = 10;
+                // await for the startup
+                barrier.await();
+
+                if (primary) {
+                    // persist sessions
+                    createSessions(sessionCount, value -> false);
+                }
+
+                barrier.await();
+                assertEquals(sessionCount, countPersistedSessionsForUser1());
+                if (InfinispanUtils.isRemoteInfinispan()) {
+                    var factory = getFactory();
+                    //let's make sure everybody gets the membership right.
+                    Awaitility.await()
+                            .pollDelay(Duration.ofMillis(100))
+                            .timeout(Duration.ofSeconds(10))
+                            .untilAsserted(() -> assertEquals(4, (long) KeycloakModelUtils.runJobInTransactionWithResult(factory, ExpirationTaskFactory::membersSize)));
+                }
+                barrier.await();
+
+                // let's find out who is going to do the expiration for the realm
+                boolean isResponsibleForExpiration = withRealm(realmId, (session, realmModel) -> {
+                    if (ExpirationTaskFactory.isSelectedForExpireSessionsInRealm(session, realmModel)) {
+                        count.incrementAndGet();
+                        return true;
+                    }
+                    return false;
+                });
+
+                // we should have a single node responsible to remove the expired entries for the test realm
+                barrier.await();
+                assertEquals(1, count.get());
+                barrier.await();
+
+                // advance time
+                if (primary) {
+                    withRealmConsumer(realmId, (session, realm) -> Time.setOffset(realm.getSsoSessionIdleTimeout() + PERIODIC_CLEANER_IDLE_TIMEOUT_WINDOW_SECONDS + 10));
+                }
+
+                barrier.await();
+
+                // trigger expiration task in other nodes
+                if (!isResponsibleForExpiration) {
+                    inComittedTransaction(ExpirationTaskFactory::manualTriggerTask);
+                }
+
+                barrier.await();
+                if (primary) {
+                    withRealmConsumer(realmId, (session, realm) -> Time.setOffset(0));
+                }
+
+                // it should not delete anything.
+                barrier.await();
+                assertEquals(sessionCount, countPersistedSessionsForUser1());
+                barrier.await();
+
+                // advance time
+                if (primary) {
+                    withRealmConsumer(realmId, (session, realm) -> Time.setOffset(realm.getSsoSessionIdleTimeout() + PERIODIC_CLEANER_IDLE_TIMEOUT_WINDOW_SECONDS + 10));
+                }
+
+                barrier.await();
+
+                // now expire it
+                if (isResponsibleForExpiration) {
+                    inComittedTransaction(ExpirationTaskFactory::manualTriggerTask);
+                }
+
+                barrier.await();
+                assertEquals(0, countPersistedSessionsForUser1());
+                barrier.await();
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            } catch (BrokenBarrierException e) {
+                throw new RuntimeException(e);
+            }
+        });
+    }
+
+    @Test
+    public void testExpirationTaskFrequency() {
+        Assume.assumeTrue(MultiSiteUtils.isPersistentSessionsEnabled());
+        final AtomicInteger counter = new AtomicInteger();
+        final int sleepSeconds = 5;
+
+        // with 1 second interval between tasks, we should have at lest 4 executions.
+        inComittedTransaction(session -> {
+            var task = ExpirationTaskFactory.create(session, 1, value -> counter.incrementAndGet());
+            task.start();
+            try {
+                Thread.sleep(TimeUnit.SECONDS.toMillis(sleepSeconds));
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            }
+            task.stop();
+        });
+
+        assertThat(counter.get(), Matchers.greaterThanOrEqualTo(sleepSeconds - 1));
+        assertThat(counter.get(), Matchers.lessThanOrEqualTo(sleepSeconds + 1));
+    }
+
+    private long countPersistedSessionsForUser1() {
+        return withRealm(realmId, (session, realm) -> {
+            var user = session.users().getUserByUsername(realm, "user1");
+            var provider = session.getProvider(UserSessionPersisterProvider.class);
+            return provider.loadUserSessionsStream(realm, user, false, null, null)
+                    .count();
+        });
+    }
+
+    private long doExpirationWithSessions(int count, int initialSessionCount, long currentEventCount) {
+        String userId = withRealm(realmId, (session, realm) -> session.users().getUserByUsername(realm, "user1").getId());
+        int offset = withRealm(realmId, (session, realm) -> realm.getSsoSessionMaxLifespan() + PERIODIC_CLEANER_IDLE_TIMEOUT_WINDOW_SECONDS + 10);
+        createSessions(count, value -> false);
+        assertEquals(count + initialSessionCount, getPersistedUserSessionsCount());
+        triggerExpiration(offset);
+        assertEquals(initialSessionCount, getPersistedUserSessionsCount());
+        long eventCount = getUserSessionExpirationEventCount(userId);
+        assertEquals(currentEventCount + count, eventCount);
+        return eventCount;
+    }
+
+    private void createSessions(int count, IntFunction<Boolean> rememberMeFunction) {
+        withRealmConsumer(realmId, (session, realm) -> {
+            UserModel user = session.users().getUserByUsername(realm, "user1");
+            ClientModel client = realm.getClientByClientId("test-app");
+            IntStream.range(0, count)
+                    .forEach(value -> {
+                        var us = session.sessions().createUserSession(null, realm, user, "user1", "127.0.0." + value, "form", rememberMeFunction.apply(value), null, null, UserSessionModel.SessionPersistenceState.PERSISTENT);
+                        createClientSession(session, realmId, client, us, "http://redirect", "state");
+                    });
+        });
+    }
+
+    private void triggerExpiration(int offset) {
+        withRealmConsumer(realmId, (session, realm) -> {
+            Time.setOffset(offset);
+            try {
+                session.getProvider(UserSessionPersisterProvider.class).removeExpired(realm);
+            } finally {
+                Time.setOffset(0);
+            }
+        });
+    }
+
+    private long getUserSessionExpirationEventCount(String userId) {
+        return getUserSessionDeletedEventCount(userId, Details.USER_SESSION_EXPIRED_REASON);
+    }
+
+    private long getUserSessionInvalidRememberMeEventCount(String userId) {
+        return getUserSessionDeletedEventCount(userId, Details.INVALID_USER_SESSION_REMEMBER_ME_REASON);
+    }
+
+    private long getUserSessionDeletedEventCount(String userId, String reason) {
+        return withRealm(realmId, (session, ignored) -> {
+            EventStoreProvider eventStore = session.getProvider(EventStoreProvider.class);
+            return eventStore.createQuery()
+                    .realm(realmId)
+                    .user(userId)
+                    .type(EventType.USER_SESSION_DELETED)
+                    .getResultStream()
+                    .map(UserSessionPersisterProviderTest::findReason)
+                    .flatMap(Optional::stream)
+                    .filter(reason::equals)
+                    .count();
+        });
+    }
+
+    private static Optional<String> findReason(Event event) {
+        return Optional.ofNullable(event.getDetails())
+                .map(map -> map.get(Details.REASON));
     }
 
     private long countUserSessionsInRealm(KeycloakSession session) {
@@ -659,18 +1295,22 @@ public class UserSessionPersisterProviderTest extends KeycloakModelTest {
     }
 
     protected static UserSessionModel[] createSessions(KeycloakSession session, String realmId) {
+       return createSessions(session, realmId, true);
+    }
+
+    protected static UserSessionModel[] createSessions(KeycloakSession session, String realmId, boolean rememberMe) {
         RealmModel realm = session.realms().getRealm(realmId);
         session.getContext().setRealm(realm);
         UserSessionModel[] sessions = new UserSessionModel[3];
-        sessions[0] = session.sessions().createUserSession(null, realm, session.users().getUserByUsername(realm, "user1"), "user1", "127.0.0.1", "form", true, null, null, UserSessionModel.SessionPersistenceState.PERSISTENT);
+        sessions[0] = session.sessions().createUserSession(null, realm, session.users().getUserByUsername(realm, "user1"), "user1", "127.0.0.1", "form", rememberMe, null, null, UserSessionModel.SessionPersistenceState.PERSISTENT);
 
         createClientSession(session, realmId, realm.getClientByClientId("test-app"), sessions[0], "http://redirect", "state");
         createClientSession(session, realmId, realm.getClientByClientId("third-party"), sessions[0], "http://redirect", "state");
 
-        sessions[1] = session.sessions().createUserSession(null, realm, session.users().getUserByUsername(realm, "user1"), "user1", "127.0.0.2", "form", true, null, null, UserSessionModel.SessionPersistenceState.PERSISTENT);
+        sessions[1] = session.sessions().createUserSession(null, realm, session.users().getUserByUsername(realm, "user1"), "user1", "127.0.0.2", "form", rememberMe, null, null, UserSessionModel.SessionPersistenceState.PERSISTENT);
         createClientSession(session, realmId, realm.getClientByClientId("test-app"), sessions[1], "http://redirect", "state");
 
-        sessions[2] = session.sessions().createUserSession(null, realm, session.users().getUserByUsername(realm, "user2"), "user2", "127.0.0.3", "form", true, null, null, UserSessionModel.SessionPersistenceState.PERSISTENT);
+        sessions[2] = session.sessions().createUserSession(null, realm, session.users().getUserByUsername(realm, "user2"), "user2", "127.0.0.3", "form", rememberMe, null, null, UserSessionModel.SessionPersistenceState.PERSISTENT);
         createClientSession(session, realmId, realm.getClientByClientId("test-app"), sessions[2], "http://redirect", "state");
 
         return sessions;
@@ -697,23 +1337,21 @@ public class UserSessionPersisterProviderTest extends KeycloakModelTest {
     private List<UserSessionModel> loadPersistedSessionsPaginated(KeycloakSession session, boolean offline, int sessionsPerPage, int expectedPageCount, int expectedSessionsCount) {
         UserSessionPersisterProvider persister = session.getProvider(UserSessionPersisterProvider.class);
 
-        int count = persister.getUserSessionsCount(offline);
-
         int pageCount = 0;
         boolean next = true;
         List<UserSessionModel> result = new ArrayList<>();
-        String lastSessionId = "00000000-0000-0000-0000-000000000000";
+        String lastSessionId = "";
 
         while (next) {
             List<UserSessionModel> sess = persister
                     .loadUserSessionsStream(0, sessionsPerPage, offline, lastSessionId)
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (sess.size() < sessionsPerPage) {
                 next = false;
 
                 // We had at least some session
-                if (sess.size() > 0) {
+                if (!sess.isEmpty()) {
                     pageCount++;
                 }
             } else {
@@ -761,4 +1399,6 @@ public class UserSessionPersisterProviderTest extends KeycloakModelTest {
 
         assertThat(actual, Matchers.arrayContainingInAnyOrder(expectedSessionIds));
     }
+
+    private record UserSessionCount(int database, int cache) {}
 }
